# Digital_receipt_Monitoring_DK

./: .gitignore  .pre-commit-config.yaml  FRONTEND.md  README.md  UV_AUTH_TEMPLATE  __init__ (1).py  calculate_m01.py  calculate_m04.py  calculate_m05.py  calculate_m09.py  calculate_m10.py  cluster_init_template.sh.j2  deploy_clusters_and_jobs.py  deploy_databricks_resources.yml  digital_receipt_monitoring.yml  kpi_monitoring_data.py  merge_receipt_anomalies.py  metric_task.py  mkdocs.yml  pyproject.toml  receipts_outside_store_hours.py
azure_pipelines/: deploy_databricks_resources.yml  init.yaml  requirements.txt
azure_pipelines/init_scripts/: automation_cluster.sh.j2  automation_lite.sh.j2
config/: README.md  clusters.yml  job_registry.yml  logging.yml  platform.yml  snowflake.yml  storage.yml  task_registry.yml
config/tasks/: HolidayStoreHours.yml  KolliPrognosisPreprocessing.yml  OpeningHoursCalendar.yml
docs/: aira_template.md
docs/projects/: digital_receipt_monitoring_aira.md  digital_receipt_monitoring_api.md  digital_receipt_monitoring_frontend.md  digital_receipt_monitoring_overview.md
sql/: README.md  exclusively_cash_payments.sql  jinja_filters.py  receipt_header.sql  receipt_line_returns.sql  receipt_line_std_til.sql  returns_without_original_receipt.sql  store_opening_hours_hist.sql  subtotal_line_std_til.sql  vt_structure.sql
src/ch_utils/: README.md  __init__.py
src/ch_utils/common/: string_utils.py  timeout_handler.py  utils.py
src/ch_utils/connectors/: load_snowflake_data.py  my_api_client.py
src/ch_utils/data/: general.py  pyspark_helpers.py  sql_helpers.py
src/ch_utils/development/: dependency_checker.py
src/ch_utils/domain/: item_hierarchy.py
src/ch_utils/foundations/: config_manager.py  env_utils.py  key_vault_manager.py  sql_renderer.py
src/ch_utils/io/: io_utils.py
src/ch_utils/reporting/: extract_data.py  report_generator_base.py
src/ch_utils/time/: date_utils.py
src/core/: README.md  config_manager.py  databricks_handler.py  job.py  run_state.py  run_task.py  snowflake_manager.py  task.py
src/core/data_manager/: README.md  __init__.py  base.py  data_manager.py  filesystem_manager.py  unity_catalog_manager.py
src/core/quality/: README.md  __init__.py  validator.py
src/core/quality/checks/: base.py  drift.py  registry.py  static.py
src/core/tasks/: data_loader.py
src/deployment/: README.md  __init__.py  api.py  deployer.py  mock_job.py  mock_task.py
src/digital_receipt_monitoring/tasks/stage_01_data_prep/: cashier_stats.py  receipts_outside_store_hours.py
src/digital_receipt_monitoring/tasks/stage_02_metrics/: calculate_m01.py  calculate_m03.py  calculate_m04.py  calculate_m05.py  calculate_m06.py  calculate_m07.py  calculate_m08.py  calculate_m10.py
src/digital_receipt_monitoring/tasks/stage_04_output/: export_receipt_monitoring_json.py
src/digital_receipt_monitoring/utils/: checks.py  kpi_monitoring_data.py  metric_task.py
